<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Title of the app -->
    <string name="app_name" translatable="false">Citra</string>
    <string name="app_name_lower" translatable="false">citra</string>

    <string name="controller_control">Control Stick</string>
    <string name="controller_c">C Stick</string>
    <string name="controller_trig">Triggers</string>
    <string name="controller_dpad">D-Pad</string>
    <string name="modifier_range">Modifier Range</string>
    <string name="analog_radius">Analog Radius (High value = High sensitivity)</string>
    <string name="analog_threshold">Analog Threshold (Low value = High sensitivity)</string>

    <string name="input_binding">Input Binding</string>
    <string name="input_binding_descrip">Press or move an input to bind it to %1$s.</string>

    <!-- Generic buttons (Shared with lots of stuff) -->
    <string name="generic_buttons">Buttons</string>
    <string name="generic_up">Up</string>
    <string name="generic_down">Down</string>
    <string name="generic_left">Left</string>
    <string name="generic_right">Right</string>
    <string name="generic_forward">Forward</string>
    <string name="generic_backward">Backward</string>
    <string name="generic_stick">Stick</string>
    <string name="generic_green">Green</string>
    <string name="generic_red">Red</string>
    <string name="generic_yellow">Yellow</string>
    <string name="generic_blue">Blue</string>
    <string name="generic_orange">Orange</string>

    <!-- GameCube buttons (May be shared with other stuff too) -->
    <string name="button_a">A</string>
    <string name="button_b">B</string>
    <string name="button_start">Start</string>
    <string name="button_x">X</string>
    <string name="button_y">Y</string>
    <string name="button_z">Z</string>
    <string name="trigger_left">L</string>
    <string name="trigger_right">R</string>


    <string name="region_combobox">Region</string>

    <!-- CPU Preference Fragment -->
    <string name="toggle_cpu_jit">Enable CPU JIT</string>

    <!-- Video Preference Fragment -->
    <string name="internal_resolution">Internal Resolution</string>
    <string name="internal_resolution_descrip">Specifies the resolution used to render at. A high resolution will improve visual quality a lot but is also quite heavy on performance and might cause glitches in certain games.</string>

    <string name="combo_language_tooltip">Note: this can be overridden when region setting is auto-select</string>

    <string name="toggle_hw_renderer">Enable hardware renderer</string>
    <string name="toggle_shader_jit">Enable shader JIT</string>
    <string name="toggle_vsync">Enable V-Sync</string>
    <string name="toggle_framelimit">Limit framerate</string>

    <string name="layout_combobox">Screen Layout</string>
    <string name="swap_screen">Swap Screens</string>

    <string name="game_directory">Game Directory</string>
    <string name="game_directory_default">/sdcard/Nintendo 3DS</string>
    <string name="toggle_deepscan">Search sub-directories for games</string>
    <string name="performance">Performance</string>
    <string name="emulation">Emulation</string>

    <string name="core">General</string>
    <string name="system">System</string>
    <string name="graphics">Graphics</string>
    <string name="audio">Audio</string>
    <string name="layout">Layout</string>

    <!-- Game Grid Screen-->
    <string name="grid_menu_settings">Settings</string>
    <string name="grid_menu_refresh">Refresh Library</string>

    <!-- Add Directory Screen-->
    <string name="add_directory_title">Add Folder to Library</string>
    <string name="add_directory_up_one_level">Up one level</string>
    <string name="add_directory_empty_folder">That folder is empty.</string>

    <!-- Preferences Screen -->
    <string name="preferences_save_exit">Save and Exit</string>
    <string name="preferences_settings">Settings</string>
    <string name="preferences_extensions">Extension Bindings</string>

    <!-- Emulation Menu -->
    <string name="emulation_exit">Exit</string>
    <string name="emulation_configure_controls">Configure Controls</string>
    <string name="emulation_edit_layout">Edit Layout</string>
    <string name="emulation_done">Done</string>
    <string name="emulation_toggle_controls">Toggle Controls</string>
    <string name="emulation_toggle_all">Toggle All</string>
    <string name="emulation_control_scale">Adjust Scale</string>
    <string name="emulation_choose_controller">Choose Controller</string>
    <string name="emulation_controller_changed">You may have to reload the game after changing extensions.</string>

    <!-- Package Names-->
    <string name="application_id">org.citraemu.citraemu</string>

    <string name="write_permission_needed">You need to allow write access to external storage for the emulator to work</string>
    <string name="systemSettings">System Settings</string>
    <string name="username">Username</string>
    <string name="combo_language">Language</string>
    <string name="toggle_audio_stretching">Enable audio stretching</string>
    <string name="toggle_audio_stretching_toolTip">This post-processing effect adjusts audio speed to match emulation speed and helps prevent audio stutter. This however increases audio latency.</string>
    <string name="output_sink_combo_box">Output Engine</string>


</resources>
